[project]
name = "teleop-cc"
version = "0.1.0"
description = "A Telegram-to-Claude-Code bridge for voice-driven development"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Weishuai Song", email = "xieji.li@monash.edu" },
]
keywords = ["telegram", "claude", "claude-code", "voice", "remote", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.0",
]

[project.scripts]
teleop = "bridge:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["bridge.py"]
